# NautilusTraderExample

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  requirements_freeze.txt
.cursor/rules/: black-best-practices.mdc  jupyterlab-best-practices.mdc  nautilus-trader-best-practices.mdc  numpy-best-practices.mdc  pandas-best-practices.mdc  python-dotenv-best-practices.mdc  ta-lib-best-practices.mdc  vectorbt-best-practices.mdc
data/: binance_loader.py
examples/: backtest_eurusd_bar_low_level_api.py  backtest_eurusd_trade_high_level_api.py  evaluate_orders_report_with_vectorbt.py  mock_orderbook.py  mock_orderbook_depth.py  mock_pyo3_orderbook_depth_persistence.py  order_book_snapshot.py
