[project]
name = "nautilustraderexample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "ipdb>=0.13.13",
    "jupyterlab>=4.3.5",
    "kaleido==0.2.0",
    "nautilus-trader>=1.212.0",
    "notebook>=7.3.2",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "ta-lib>=0.6.3",
    "vectorbt>=0.27.2",
]
